Give the sidebar a high z-index to ensure it stays above the main navigation

--- a/src/theme/edit.scss
+++ b/src/theme/edit.scss
@@ -1,7 +1,8 @@
 @use 'nsw-design-system/src/main';
 
 // Ensure Volto toolbar is above the NSW main navigation
-#toolbar {
+#toolbar,
+#sidebar {
   z-index: 300;
 }
 
